# TSP-Management

./: .gitignore  CMakeLists.txt  main.cpp
docs/: Doxyfile
docs/output/html/: Auxiliar_8h_source.html  Edge_8h_source.html  Graph_8h_source.html  Management_8h_source.html  Menu_8h_source.html  Vertex_8h_source.html  annotated.html  classAuxiliar-members.html  classAuxiliar.html  classEdge-members.html  classEdge.html  classEdge__coll__graph.dot  classGraph-members.html  classGraph.html  classManagement-members.html  classManagement.html  classMenu-members.html  classMenu.html  classVertex-members.html  classVertex.html  classVertex__coll__graph.dot  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  structVertex_1_1greaterDist-members.html  structVertex_1_1greaterDist.html  structprintingOptions-members.html  structprintingOptions.html
docs/output/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+3 more)
docs/output/latex/: annotated.tex  classAuxiliar.tex  classEdge.tex  classEdge.tex.tmp  classEdge__coll__graph.dot  classGraph.tex  classManagement.tex  classMenu.tex  classVertex.tex  classVertex__coll__graph.dot  refman.tex  structVertex_1_1greaterDist.tex  structprintingOptions.tex
src/: Auxiliar.cpp  Auxiliar.h  Edge.cpp  Edge.h  Graph.cpp  Graph.h  Management.cpp  Management.h  Menu.cpp  Menu.h  Vertex.cpp  Vertex.h
